--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
-        <title>Shirley Wu</title>
+        <title>Conectemos</title>
         <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet" />
         <style>
@@ -69,20 +69,16 @@
         <div class="container">
             <div class="row py-3">
                 <div class="col-12">
-                    <h1 class="py-4">Shirley Wu</h1>
-                    <p>Shirley Wu es una infografista que desde pequeña tiene su corazón dividido entre el arte y la matemática.</p>
-                    <p>Una vez salida al mundo laboral, encontró en el mundo de la infografía un espacio donde poder desarrollar estas dos aristas de su vida. Pasó por varios estudios y ahora trabaja freelance en aquellos proyectos que más le interesan.</p>
-                    <p>En su sitio web se encuentran todas los proyectos e infografías que ha realizado, con los respectivos premios y reconocimientos que han ganado.</p>
-                    <p>En cuanto a sus infografías una de las más interesantes es una en colaboración con Google que analiza las búsquedas de destinos en distintos países, según temporadas y temas como naturaleza, ciudades, atracciones, etc.</p>
-                    <p>Otra infografía que llama la atención es una que remarca a los premios nobel femeninos en un entorno 3D otorgándoles la figura de un diamante que posee un color especial según la especialidad y al hacer zoom una breve reseña de su aporte en el campo.</p>
-                    <p>El último trabajo publicado es un juego interactivo donde se maneja a una comunidad en el contexto de una pandemia, se eligen comunidades reales y con data en tiempo real tú decides si mantenerlos en casa o no.</p>
+                    <h1 class="py-4">Hola, soy Paula Trujillo</h1>
+                    <p>Estudiante de publicidad Uc y en esta página podrás encontrar mis distintos puntos de contacto para que podamos conectar </p>
+                    <p>:)</p>
                 </div>
             </div>
             <div class="row">
                 <!--Imagen 1-->
                 <figure class="col-12 col-lg-6">
-                    <img src="https://pbs.twimg.com/profile_images/1203880029194792960/CnMOwiO2_400x400.jpg" />
-                    <figcaption class="pt-1 pb-2 px-2 small">Shirley Wu, foto recuperada de su Twitter <a href="https://twitter.com/sxywu/" Recuperado de su Twitter </a></figcaption>
+                    <img src="img/01.png" />
+                    <figcaption class="pt-1 pb-2 px-2 small"> Esta soy yo <a> href="" </a></figcaption>
                 </figure>
                 <!--Imagen 2-->
                 <figure class="col-12 col-lg-6">
