--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                 </figure>
                 <!--Imagen 2-->
                 <figure class="col-12 col-lg-6">
-                    <img src="https://sxywu.com/static/media/logo.79bad544.png" />
-                    <figcaption class="pt-1 pb-2 px-2 small">Su logo personal<a href="https://sxywu.com/" Recuperado de su página web personal </a></figcaption>
+                    <img src="img/02.png" />
+                    <figcaption class="pt-1 pb-2 px-2 small">Mi logo personal<a href="https://sxywu.com/" Recuperado de su página web personal </a></figcaption>
                 </figure>
                 <!--Imagen 3-->
                 <figure class="col-12 col-lg-6">
